adlatus-ci-cd/cd/deploy/base/modules/pm-api/patches/ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pm-api-ingress
  namespace: adl
